# mcs

./: .gitignore  LICENSE  README.md  pixi.toml  pyproject.toml
.github/workflows/: package.yml
conda.recipe/: recipe.yaml
mcs/: mcs.py  mcs_opt.py  runmcs.py  sane.py
mcs/.spyproject/: vcs.ini
mcs/functions/: defaults.py  functions.py
mcs/gls/: gls.py  lsconvex.py  lsdescent.py  lsguard.py  lsinit.py  lslocal.py  lsnew.py  lspar.py  lsquart.py  lsrange.py  lssat.py  lssep.py  lssort.py  lssplit.py  quartic.py  runngls.py
mcs/mcs_fun/: basket_func.py  chk_bound.py  chk_flag.py  chk_locks.py  csearch.py  exgain.py  genbox.py  hessian.py  initi_func.py  lsearch.py  neighbor.py  polint.py  quadratic_func.py  sign.py  split_func.py  splrnk.py  strtsw.py  triple.py  updtf.py  updtrec.py  vertex_func.py
mcs/minq/: getalp.py  ldldown.py  ldlrk1.py  ldltest.py  ldlup.py  minq.py  minq_data.py  minqdef.py  minqsep.py  minqsub.py  runminq.py
